Fixed error with not showing projects picture
Fixed error with not showing projects picture.
Исправлена ошибка, когда изображения в проекте не отображались.

--- a/css/style.css
+++ b/css/style.css
@@ -2056,6 +2056,18 @@ body {
   cursor: pointer;
 }
 
+.card-project__picture picture {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
+  width: 100%;
+  height: 100%;
+}
+
 .card-project__picture img,
 .card-project__picture source,
 .card-project__picture video {
